<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.ala.musicalarm.ChooseDateFragment"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:layout_weight="5"
android:scrollbars="vertical"
    android:id="@+id/scrollViewDate"
       >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/Menu_Date"
        android:textSize="@dimen/text_size"
        android:minHeight="@dimen/standard_text_minHeight"
        android:paddingBottom="@dimen/activity_vertical_margin"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="7">


        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Monday"
            android:id="@+id/buttonMonday"
            android:background="@color/colorMenu"
            android:layout_weight="1"/>
        <FrameLayout
            android:layout_width="2dp"
            android:layout_height="2dp"/>
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tuesday"
            android:background="@color/colorMenu"
            android:id="@+id/buttonTuesday"
            android:layout_weight="1"/>
        <FrameLayout
        android:layout_width="2dp"
        android:layout_height="2dp"/>
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Wednesday"
            android:background="@color/colorMenu"
            android:id="@+id/buttonWednesday"
            android:layout_weight="1"/>
        <FrameLayout
            android:layout_width="2dp"
            android:layout_height="2dp"/>
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Thursday"
            android:background="@color/colorMenu"
            android:layout_weight="1"
            android:id="@+id/buttonThursday" />
        <FrameLayout
            android:layout_width="2dp"
            android:layout_height="2dp"/>
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Friday"
            android:background="@color/colorMenu"
            android:layout_weight="1"
            android:id="@+id/buttonFriday" />
        <FrameLayout
            android:layout_width="2dp"
            android:layout_height="2dp"/>
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Saturday"
            android:layout_weight="1"
            android:id="@+id/buttonSaturday"
            android:background="@color/colorMenu"
            />
        <FrameLayout
            android:layout_width="2dp"
            android:layout_height="2dp"/>
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorMenu"
            android:text="@string/Sunday"
            android:layout_weight="1"
            android:id="@+id/buttonSunday" />




    </LinearLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/Hour_Label"
        android:textSize="@dimen/text_size"
        />



    <TimePicker
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
        android:id="@+id/timePicker"
       />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/otherSet"
        android:textSize="@dimen/text_size"
        android:paddingBottom="@dimen/activity_vertical_margin"
        />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="@dimen/standard_icon_size"
        android:text="@string/switchRepeatEachWeek"
        android:id="@+id/switchEachWeek" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="@dimen/standard_icon_size"
        android:text="@string/switchShuffle"
        android:id="@+id/switchShuffle" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="@dimen/standard_icon_size"
        android:text="@string/switchVibrate"
        android:id="@+id/switchVibrate" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/volumeSet"
        android:textSize="@dimen/text_size"
        android:paddingBottom="@dimen/activity_vertical_margin"
        />
    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_icon_size"
        android:id="@+id/seekBarVolume"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/Set_alarm"
        android:textSize="@dimen/text_size"
        android:paddingBottom="@dimen/activity_vertical_margin"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Set_alarm"
        android:layout_gravity="center"
        android:id="@+id/setAlarm"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cancel"
        android:layout_gravity="center"
        android:id="@+id/cancelAlarm"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/Dates_title"
        android:textSize="@dimen/text_size"
        android:paddingBottom="@dimen/activity_vertical_margin"
        />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LLDates"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DeleteAll"
        android:layout_gravity="center"
        android:id="@+id/deleteEntries"

        />




    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"/>



</LinearLayout>

</ScrollView>
