<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:baselineAligned="false"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="1dp"
    android:background="@color/background_light"
    android:weightSum="10"
    >
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="7"
    >
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_white"
        android:textSize="@dimen/song_name_size"
        android:textStyle= "bold"
        android:text="@string/Time"/>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_white"
        android:textSize="@dimen/song_name_size"
        android:textStyle= "bold"
        android:text="@string/Day"/>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_white"
        android:textSize="@dimen/song_name_size"
        android:textStyle= "bold"
        android:text="@string/switchShuffle"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_white"
        android:textSize="@dimen/song_name_size"
        android:textStyle= "bold"
        android:text="@string/switchRepeatEachWeek"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_white"
        android:textSize="@dimen/song_name_size"
        android:textStyle= "bold"
        android:text="@string/switchVibrate"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_horizontal_margin"
        android:background="@color/colorPrimaryDark"
        android:layout_weight="1"/>
</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="4"
        >

        <TextView
            android:id="@+id/alarm_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_white"
            android:textStyle= "bold"
            android:textSize="@dimen/song_name_size" />

        <TextView
            android:id="@+id/alarm_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_white"
            android:textSize="@dimen/song_name_size"
            android:textStyle= "bold" />

        <TextView
            android:id="@+id/shuffleIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_white"
            android:textSize="@dimen/song_name_size"
            android:textStyle= "bold"/>


        <TextView
            android:id="@+id/repeatIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_white"
            android:textSize="@dimen/song_name_size"
            android:textStyle= "bold" />

        <TextView
            android:id="@+id/vibrationIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_white"
            android:textSize="@dimen/song_name_size"
            android:textStyle= "bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_horizontal_margin"
            android:background="@color/colorAccent"
            android:layout_weight="1"/>
    </LinearLayout>



</LinearLayout>
