<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.ala.musicalarm.MainActivity"
        android:background="@color/colorMain"
        android:weightSum="20"

        >

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"

        />
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/fragment_placeholder"
    />

 </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/standard_icon_size"
        android:id="@+id/LLMenu"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        >
        <Button
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Menu_Home"
            android:onClick="chooseMainButton"
            android:id="@+id/buttonMain"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="@color/text_white"
            />
<FrameLayout
    android:layout_width="2dp"
    android:layout_height="2dp"/>

        <Button
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Menu_Date"
            android:id="@+id/buttonDate"
            android:onClick="chooseDateButton"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="@color/text_white"

            />
        <FrameLayout
            android:layout_width="2dp"
            android:layout_height="2dp"/>
        <Button
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Menu_Song"
            android:id="@+id/buttonSong"
            android:onClick="chooseSongButton"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColorHighlight="@color/text_white"
            android:textColor="@color/text_white"

            />

    </LinearLayout>


</RelativeLayout>
